# upgrade_all

./: .gitignore  README.md  pyproject.toml
src/pip_upgrade_all/: __init__.py  __main__.py
